--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,14 @@ models/*
 Thumbs.db
 .vscode/
 .idea/
+
+# Keep taxonomy deliverables
+!taxonomy/
+!taxonomy/*.csv
+!taxonomy/*.json
+
+# If you ever generate large temporary files inside taxonomy
+taxonomy/tmp/
+taxonomy/*.parquet
+taxonomy/*.npy
+taxonomy/*.npz
