--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
-# Core
-pandas==2.2.2
-numpy==2.0.1
-pyarrow==17.0.0
+# Core data processing
+pandas>=2.0.0
+numpy>=1.24.0
+pyarrow>=12.0.0
 
-# ML
-scikit-learn==1.5.1
+# Machine learning & clustering
+scikit-learn>=1.3.0
 
-# Keyphrase extraction
-yake==0.4.8
-rake-nltk==1.0.6
-nltk==3.9.1
+# Keyphrase extraction (deterministic NLP)
+yake>=0.4.8
+rake-nltk>=1.0.6
+nltk>=3.8.0
 
-# Embeddings (multilingual)
-sentence-transformers==3.0.1
-transformers==4.43.3
-torch==2.3.1
+# Embeddings (multilingual, non-generative)
+sentence-transformers>=2.2.0
+transformers>=4.30.0
+torch>=2.0.0
 
-# 3D projection + visualization
-umap-learn==0.5.6
-plotly==5.23.0
+# Dimensionality reduction & visualization
+umap-learn>=0.5.0
+plotly>=5.15.0
+
+# YAML parsing for playbooks
+pyyaml>=6.0
