updates on code
feat: Add RGPD/GDPR compliance module for anonymizing sensitive personal information

- Introduced a new anonymization module to detect and redact PII such as names, emails, phone numbers, and more.
- Created API server using FastAPI for remote access to data and pipeline execution.
- Added configuration options for the anonymization behavior via environment variables and programmatic settings.
- Documented the anonymization process and usage in a new ANONYMIZATION.md file.
- Implemented a health check and endpoints for retrieving dashboard data and pipeline status.
- Added example usage and testing capabilities for the anonymization module.

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,7 @@ plotly>=5.15.0
 
 # YAML parsing for playbooks
 pyyaml>=6.0
+
+# API server for remote access
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
