Add auth, admin UI, DB modules and UI tweaks
Introduce authentication and admin functionality, plus wide UI/CSS refinements and a simple DB backend.

Changes:
- Add auth: AuthContext and LoginScreen components; integrate auth into App and Navigation with user menu/sign-out.
- Add VoiceRecorder component and import where needed.
- Add Admin page (admin-only) to inspect DB status, pipeline stats and upload history; includes sync action.
- Translate many UI strings to English and adjust labels/layout across Actions, Segments, Clients, Data pages.
- Large App.css overhaul: spacing, colors (accent -> accent-primary), new login, user menu, admin, upload grid and other component styles.
- Add server/db package: connection, schema, CRUD, setup and sync helpers; update server/api_server.py to use DB (and add admin endpoints consumed by UI).
- Update requirements.txt and small main.tsx/FileUpload/App.tsx changes to wire new features.

Why: enable user authentication, admin tooling and DB-backed upload/pipeline visibility while improving UI consistency and styling.

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,9 @@ pyyaml>=6.0
 # API server for remote access
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
+
+# Database (Neon PostgreSQL)
+asyncpg>=0.29.0
+psycopg2-binary>=2.9.9
+python-dotenv>=1.0.0
+bcrypt>=4.1.0
