Add advisor, calendar, client pages & Kafka
Introduce multiple new dashboard pages (AdvisorsPage, CalendarPage, Client360Page, ExportPage, KPIDashboard, PlaybooksPage) with advisor workload charts, auto-assign actions and related UI components. Add frontend service modules (services/apiService.ts, services/db.ts, services/dbService.ts), extend App.css with large calendar & client-360 styling, and add @neondatabase/serverless to package.json. Backend updates include API server changes and DB updates (crud, schema, setup) plus new Kafka event streaming modules (server/kafka: config, producer, consumer, events). Also add VoiceRecorder/AuthContext tweaks and update Python requirements.

Co-Authored-By: gdebuigne <243538574+gdebuigne@users.noreply.github.com>
Co-Authored-By: erwan zouaoui <241175427+true-Erwan@users.noreply.github.com>
Co-Authored-By: maximdprt <243538611+maximdprt@users.noreply.github.com>

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "11.14.1",
     "@mui/icons-material": "7.3.5",
     "@mui/material": "7.3.5",
+    "@neondatabase/serverless": "^1.0.2",
     "@popperjs/core": "2.11.8",
     "@radix-ui/react-accordion": "1.2.3",
     "@radix-ui/react-alert-dialog": "1.1.6",
