--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,6 @@ asyncpg>=0.29.0
 psycopg2-binary>=2.9.9
 python-dotenv>=1.0.0
 bcrypt>=4.1.0
+
+# Kafka event streaming (optional — set KAFKA_BOOTSTRAP_SERVERS to enable)
+aiokafka>=0.10.0
