refactor: Remove all 'Voice-to-Tag' references, rename to 'Client Intelligence Platform'
Replaced all occurrences of 'Voice-to-Tag' with 'Client Intelligence Platform'
or 'Client Intelligence' across all documentation and code files.

Updated files (30 files):

📚 Documentation:
- readme.md: LVMH Client Intelligence Platform — Vector Profiles
- RELEASE_NOTES.md: Production Release title and project name
- docs/prd.md: Client Intelligence Platform (Hybrid)
- docs/pipeline.md: Pipeline documentation
- docs/agents.md: Project description
- tests/README.md: Test suite description

🔧 Code & Configuration:
- server/run_all.py: Pipeline title and description
- server/api_server.py: API title and service name
- server/__init__.py, server/shared/*.py: Module docstrings
- server/db/__init__.py, server/kafka/__init__.py: Package docs
- server/embeddings/projection_3d.py: 3D visualization title
- src/: All legacy source files updated

🚀 Scripts & Launchers:
- LVMH_Pipeline.command: macOS launcher
- LVMH_Pipeline.bat: Windows launcher
- LVMH_Server.command: Server launcher
- run_setup.sh, run_windows.bat: Setup scripts
- makefile: Docker image/container names
- .env.example: Environment variables header

📋 Configuration:
- activations/playbooks.yml: Playbooks header
- SERVER_SETUP.md, RENDER_DEPLOYMENT.md: API service name

All references now use 'LVMH Client Intelligence Platform' for consistency
with business requirements. No functional changes.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # =============================================================
-# LVMH Voice-to-Tag Pipeline Environment Variables
+# LVMH Client Intelligence Pipeline Environment Variables
 # =============================================================
 # Copy this file to .env and fill in your values:
 #   cp .env.example .env
