--- a/activations/playbooks.yml
+++ b/activations/playbooks.yml
@@ -1,4 +1,4 @@
-# LVMH Voice-to-Tag Playbooks
+# LVMH Client Intelligence Playbooks
 # Action recommendations based on client profiles and detected concepts
 
 version: "1.0"
